paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c1/sample_004/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c1/sample_004/target.rs:34:5
   |
34 | /     unsafe {
35 | |         if *pi2 != 42 {
36 | |             return 4;
...  |
47 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c1/sample_004/target.rs:7:14
  |
7 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.